@@ -26,7 +26,7 @@
     <parent>
       <groupId>org.jboss</groupId>
       <artifactId>jboss-parent</artifactId>
-      <version>22</version>
+      <version>23</version>
     </parent>
 
     <groupId>org.wildfly</groupId>
@@ -6290,22 +6290,10 @@
             <properties>
                 <modular.jdk.args>
                     --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
-                    --add-opens=java.base/java.lang=ALL-UNNAMED
-                    --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
-                    --add-opens=java.base/java.security=ALL-UNNAMED
-                    --add-opens=java.base/java.math=ALL-UNNAMED
-                    --add-opens=java.base/java.io=ALL-UNNAMED
-                    --add-opens=java.base/java.net=ALL-UNNAMED
-                    --add-opens=java.base/java.util=ALL-UNNAMED
-                    --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
-                    --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
-                    --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
-                    --add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED
-                    --add-opens=java.management/javax.management=ALL-UNNAMED
-                    --add-opens=java.management/javax.management.openmbean=ALL-UNNAMED
-                    --add-opens=java.naming/javax.naming=ALL-UNNAMED
                     --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED
                     --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
+                    --permit-illegal-access
+                    --add-modules=java.xml.bind
                 </modular.jdk.args>
                 <!-- [WFCORE-1494] remove JUL workaround -->
                 <modular.jdk.props>-Dsun.util.logging.disableCallerCheck=true -Dsun.reflect.debugModuleAccessChecks=true</modular.jdk.props>
@@ -6313,7 +6301,7 @@
                 <checkstyle.skip>true</checkstyle.skip>
                 <!-- we override javassist to version that works on JDK9 -->
                 <version.org.javassist>3.22.0-CR1</version.org.javassist>
-                <version.org.jboss.byteman>4.0.0-BETA3</version.org.jboss.byteman>
+                <version.org.jboss.byteman>4.0.0-BETA5</version.org.jboss.byteman>
             </properties>
             <build>
                 <plugins>
@@ -6324,7 +6312,7 @@
                         <configuration>
                             <!-- fork is needed so compiler args can be used -->
                           <!--  <release>8</release>-->
-                            <fork>true</fork>
+                            <!--<fork>true</fork>-->
                             <!-- jdk.unsupported is needed for security subsystem FastConcurrentDirectDeque-->
                             <compilerArgument>-J--add-modules=java.xml.ws.annotation,jdk.unsupported</compilerArgument>
                         </configuration>
